--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^4.1.1",
+    "vue-router": "^4.0.3",
+    "vue3-draggable": "^2.0.9",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
